k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api

spec:

  replicas: 4

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:

      containers:

      - name: api

        image: sanjaynagarro/nagp-api:v1

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 8000

        livenessProbe:
          httpGet:
            path: /
            port: 8000
