k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: nagp-assignment

spec:

  selector:
    app: api

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
