k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service

spec:

  selector:
    app: postgres

  ports:
  - port: 5432

  type: ClusterIP
